# Equation_Calculation_Sheet

./: .gitignore  .replit  MANIFEST.in  README.md  pyproject.toml  replit.md  setup.py
.github/workflows/: publish-to-pypi.yml  python-package.yml
ecs/: __init__.py  interpreter.py
ecs/example/: constants.ecs  main.ecs  main.py  physics.ecsp
