[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecs-equation"
version = "1.0.0"
description = "ECS - Equation Calculation Sheet: A DSL for mathematical calculations"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "ECS Team", email = "ecs@example.com"}
]
keywords = ["math", "equation", "calculator", "dsl", "physics", "engineering", "scientific"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ecs-team/ecs"
"Bug Reports" = "https://github.com/ecs-team/ecs/issues"
Source = "https://github.com/ecs-team/ecs"

[tool.setuptools]
packages = ["ecs"]
